# sedk

./: Cargo.toml  readme.md
sedk/: Cargo.toml
sedk/src/: lib.rs
sedk/src/dsl/: analysis.rs  character_filters.rs  field.rs  mod.rs  primitives.rs  token_processing.rs  tokenizers.rs
sedk_derive/: Cargo.toml
sedk_derive/src/: indexable.rs  into_fields.rs  lib.rs
sedk_derive/tests/: composition.rs  primitives.rs  runner.rs
sedk_derive/tests/failures/: composition.rs  composition.stderr
src/: lib.rs
src/dsl/: analysis.rs  character_filters.rs  dsl.rs  field.rs  mod.rs  text_processing.rs  token_processing.rs  tokenizers.rs
