[package]
name = "sedk_derive"
version = "0.1.0"
authors = ["Sam Schick <schicksw@protonmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/runner.rs"

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"
trybuild = "1.0.42"

[dev-dependencies]
sedk = { path = "../sedk"}
